<resources>
    <string name="app_name">Tanitionary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_first"></string>
    <string name="title_activity_activity_login">Log In</string>
    <string name="dialog_close_button">Tutup</string>
    <string name="dialog_yes_button">Ya</string>
    <string name="dialog_no_button">Tidak</string>

    <!-- API KEY -->
    <string name="api_key_weather">11eb6f305eb3cd10b1dd264976bf5ede</string>

    <!-- Main Act -->
    <string name="tab_home">Home</string>
    <string name="tab_forum">Forum</string>
    <string name="tab_other">Lainnya</string>

    <!-- Fragment Home -->
    <string name="button_diagnosis">Diagnosa Penyakit</string>
    <string name="button_dictionary">Kamus</string>
    <string name="button_land_manage">Kelola Tanah</string>
    <string name="button_market_price">Harga Pasaran</string>

    <!-- Fragment Forum -->
    <string name="title_ask_farmer">Tanya Tani</string>
    <!--<string name="action_write">Settings</string>-->

    <!-- Fragment Others -->
    <string name="frag_others_menu_account">Akun</string>
    <string name="frag_others_menu_security">Keamanan</string>
    <string name="frag_others_menu_setting">Pengaturan</string>
    <string name="frag_others_menu_help">Bantuan</string>
    <string name="frag_others_menu_about">Tentang Kami</string>

    <!-- Login Act -->
    <string name="login_greeting_welcome">Selamat Datang.!</string>
    <string name="login_greeting_another">Senang bertemu anda.</string>
    <string name="login_forget_pass">Lupa password ?</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>

    <!-- First Act -->
    <string name="first_act_string_1"><![CDATA[Berbagi pengetahuan<br/>dengan para petani lainnya]]></string>
    <string name="first_act_string_2"><![CDATA[Diagnosa penyakit tanaman<br/>dengan mudah]]></string>
    <string name="first_act_string_3"><![CDATA[Mengelola tanah pertanian<br/>menjadi menyenangkan]]></string>
    <string name="first_act_string_4"><![CDATA[Update semua harga komoditas<br/>di pasaran saat ini]]></string>

    <!-- Fragment Forget Pass -->
    <string name="frag_forget_pass_ask_forget">Lupa Password ?</string>
    <string name="frag_forget_pass_gonna_sent_to_email">Silahkan ikuti langkah dibawah, password reset akan kami kirim via email</string>
    <string name="frag_forget_pass_next">Next</string>
    <string name="frag_forget_pass_email">Email</string>
    <string name="frag_forget_pass_secure_account">Pengamanan Akun</string>
    <string name="frag_forget_pass_ask_phone_number">Untuk keamanan akun anda, silahkan masukkan nomor handphone yang sudah didaftarkan</string>
    <string name="frag_forget_pass_your_phone_number_is">Nomor anda : +62 xxxxxxxxxx92</string>
    <string name="frag_forget_pass_number_phone">Nomor Handphone</string>
    <string name="frag_forget_pass_reset_my_password">Reset Password</string>
    <string name="frag_forget_pass_account_reseted">Password anda telah di reset, silahkan cek email !</string>

    <!-- Act Diagnose -->
    <string name="title_activity_activity_diagnose">Diagnosa</string>
    <string name="act_diagnose_are_your_plant">Apakah tanaman anda</string>
    <string name="act_diagnose_no_symtomp">Tidak ada gejala</string>
    <string name="act_diagnose_alert_message">Penyakit pada tanaman anda belum terdeteksi, apakah anda yakin ingin kembali ?</string>
    <string name="title_activity_activity_market">ActivityMarket</string>

    <!-- Act Splash Screen -->
    <string name="title_activity_activity_splash_screen">ActivitySplashScreen</string>

    <!-- Act Other Account -->
    <string name="title_activity_activity_other_account">Akun</string>
    <string name="act_other_account_head_personal_data">Data Personal</string>
    <string name="act_other_account_head_account">Data Akun</string>
    <string name="act_other_account_item_avatar">Avatar</string>
    <string name="act_other_account_item_name">Nama</string>
    <string name="act_other_account_item_location">Domisili</string>
    <string name="act_other_account_item_phone_number">Nomor Telepon</string>
    <string name="act_other_account_item_email">Email</string>
    <string name="act_other_account_item_log_out">Log out</string>
    <string name="act_other_account_sure_to_log_out">Apakah anda yakin ingin log out ?</string>
    <string name="title_activity_activity_weather">ActivityWeather</string>
</resources>
