<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/frag_forget_pass_ask_forget"
            android:textColor="@color/colorBlueLight"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/frag_forget_pass_gonna_sent_to_email"/>

        <EditText
            android:id="@+id/edit_fragment_login_forget_pass_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/frag_forget_pass_email"/>

        <com.andexert.library.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:rv_rippleDuration="400"
            app:rv_color="@color/colorBlack"
            app:rv_centered="false">

            <TextView
                android:id="@+id/text_fragment_login_forget_pass_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/frag_forget_pass_next"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/colorGreenLight"/>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_fragment_login_forget_pass_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"/>

</RelativeLayout>