<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="id.developer.tanitionary.ActivityOtherAccount"
    android:background="#f5f5f5">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right"
                android:background="@drawable/border_bottom_header"
                android:text="@string/act_other_account_head_personal_data"
                android:textColor="@color/colorGrayAbout"
                android:textSize="@dimen/act_other_account_text_size_head"/>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_avatar"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_act_other_account_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/pp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item_unselected"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>

                <TextView
                    android:id="@+id/text_act_other_account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="Bey"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item_unselected"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_location"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>

                <TextView
                    android:id="@+id/text_act_other_account_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="Ngalam"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item_unselected"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_phone_number"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>

                <TextView
                    android:id="@+id/text_act_other_account_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="+62 xxxxxxxx82"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right"
                android:background="@drawable/border_bottom_header"
                android:text="@string/act_other_account_head_account"
                android:textColor="@color/colorGrayAbout"
                android:textSize="@dimen/act_other_account_text_size_head"/>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item_unselected"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_email"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>

                <TextView
                    android:id="@+id/text_act_other_account_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="bexxxxx@gmail.com"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_act_other_account_layout_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_bottom_item_unselected"
                android:paddingLeft="@dimen/act_other_account_pad_left_right"
                android:paddingRight="@dimen/act_other_account_pad_left_right">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/act_other_account_pad_item_top_bot"
                    android:layout_marginBottom="@dimen/act_other_account_pad_item_top_bot"
                    android:text="@string/act_other_account_item_log_out"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/act_other_account_text_size_item"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
    <!--<se.emilsjolander.stickylistheaders.ExpandableStickyListHeadersListView-->
    <!--android:id="@+id/list_act_other_account"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:clipToPadding="false"-->
    <!--android:drawSelectorOnTop="true"-->
    <!--android:scrollbars="none\"-->
    <!--android:fastScrollEnabled="true"-->
    <!--android:overScrollMode="never"/>-->